--- a/recruiter/apps/candidate/templates/candidate/base.html
+++ b/recruiter/apps/candidate/templates/candidate/base.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'candidate/style.css' %}" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
 	</head>
 	<body>
 
