--- a/recruiter/apps/candidate/static/candidate/style.css
+++ b/recruiter/apps/candidate/static/candidate/style.css
@@ -1,5 +1,5 @@
 body{
-	font-family: "FedraSansStd";
+
 }
 
 #back_picture{
@@ -22,7 +22,7 @@ body{
 
 #regint{
 	/*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif*/;
-	font-family: 'FedraSansStd';
+	font-family: "Segoe UI",Arial,sans-serif;
 	font-size: 30px;
 	font-weight: 400;
 	color: #008789;
@@ -31,19 +31,19 @@ body{
 
 #inform{
 	/*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;*/
-	font-family: 'FedraSansStd';
+	font-family: "Segoe UI",Arial,sans-serif;
 	font-size: 15px;
 	font-weight: 400;
 }
 
 #fill{
-    font-family: 'FedraSansStd';
+    font-family: "Segoe UI",Arial,sans-serif;
 	font-size: 13px;
 	font-weight: 300;
 }
 
 .panel-heading {
-    font-family: 'FedraSansStd';
+    font-family: "Segoe UI", Arial, sans-serif;
     font-size: 18px;
     font-weight: 400;
 
@@ -126,7 +126,7 @@ body{
 
 .button_register_uncompleted {
 
-	font-family: 'FedraSansStd';
+	font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
 	font-size: 14px;
     height: 30px;
@@ -141,7 +141,7 @@ body{
 
 .button_register_completed {
 
-    font-family: 'FedraSansStd';
+    font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
 	font-size: 14px;
     background-color: #008789;
@@ -173,7 +173,7 @@ body{
 
 #reg_label {
 
-    font-family: 'FedraSansStd';
+    font-family: "Segoe UI",Arial,sans-serif;
     color: black;
     font-weight: 400;
     font-size: 14px;
@@ -224,7 +224,7 @@ body{
 
 .control-label{
     color: white;
-    font-family: 'FedraSansStd';
+    font-family: "Segoe UI",Arial,sans-serif;
     font-size: 12px;
     font-weight: 100;
 }
@@ -236,7 +236,7 @@ body{
 
 }
 /*#registrerknapp{
-	font-family: 'FedraSansStd';
+	font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;*/
 	/*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;*/
 	/*font-size: 10px;
@@ -251,7 +251,7 @@ body{
     border-radius: 30px;
 }*/
 #registrer_interesse{
-	font-family: 'FedraSansStd';
+	font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
 	font-size: 30px;
 	line-height: 0.1;
@@ -280,7 +280,7 @@ body{
 
 #usboks1{
 
-	font-family: 'FedraSansStd';
+	font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
 	font-size: 11px;
 	line-height: 0.5;
@@ -313,7 +313,7 @@ body{
 
 #butt {
 
-	font-family: 'FedraSansStd';
+	font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
 	font-size: 11px;
 	line-height: 0.1;
@@ -328,7 +328,7 @@ body{
 }
 
 #butt_green{
-	font-family: 'FedraSansStd';
+	font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
 	font-size: 11px;
 	line-height: 0.1;
@@ -360,7 +360,7 @@ body{
 #login_kandidat{
 
 	width: 150%;
-	font-family: 'FedraSansStd';
+	font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
 	font-size: 30px;
 	line-height: 0.1;
@@ -376,7 +376,7 @@ body{
 
 #header {
  height: 5vh;
- padding-left: 10%;
+ padding-left: 5%;
 }
 
 #header img {
@@ -398,10 +398,9 @@ body{
     max-height: 400px;
     display: table;
     text-align: left;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 5px;
+    margin: 1% 10%;
     line-height:1.5em;
+    font-weight: normal;
 }
 
 #kand_personalia {
@@ -442,4 +441,8 @@ body{
 
 .row{
     padding-top: 6px;
+}
+
+#terms_header{
+    margin-left: 10%
 }
