Comment required fix

--- a/recruiter/apps/hr/templates/hr/reject-user-modal.html
+++ b/recruiter/apps/hr/templates/hr/reject-user-modal.html
@@ -73,7 +73,7 @@ Jeg har undersøkt hvorvidt vi har en ledig posisjon som passer din profil i en 
 								<div class="col-sm-offset-0 col-sm-10" style="display: inline" id="fra_til">
 
                                     Til:
-                                    <input placeholder="Epost-tipser" id="reject_cand_email" type="email" class="form-control" name="to_email_tips" value="">
+                                    <input placeholder="Epost-tipser" id="reject_cand_email" type="email" class="form-control" name="to_email_tips" value="{{ candidate.tipser_mail }}">
                                     <input id="id_candidate" type="hidden" name="id_candidate" value="">
                                 </div>
 
