--- a/recruiter/apps/candidate/static/candidate/style.css
+++ b/recruiter/apps/candidate/static/candidate/style.css
@@ -1,5 +1,5 @@
 body{
-
+	font-family: FedraSansStd;
 }
 
 #back_picture{
@@ -22,7 +22,7 @@ body{
 
 #regint{
 	/*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif*/;
-	font-family: "Segoe UI",Arial,sans-serif;
+	font-family: FedraSansStd;
 	font-size: 30px;
 	font-weight: 400;
 	color: #008789;
@@ -31,19 +31,19 @@ body{
 
 #inform{
 	/*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;*/
-	font-family: "Segoe UI",Arial,sans-serif;
+	font-family: FedraSansStd;
 	font-size: 15px;
 	font-weight: 400;
 }
 
 #fill{
-    font-family: "Segoe UI",Arial,sans-serif;
+    font-family: FedraSansStd;
 	font-size: 13px;
 	font-weight: 300;
 }
 
 .panel-heading {
-    font-family: "Segoe UI", Arial, sans-serif;
+    font-family: FedraSansStd;
     font-size: 18px;
     font-weight: 400;
 
@@ -126,7 +126,7 @@ body{
 
 .button_register_uncompleted {
 
-	font-family: "Segoe UI",Arial,sans-serif;
+	font-family: FedraSansStd;
     font-weight: 400;
 	font-size: 14px;
     height: 30px;
@@ -141,7 +141,7 @@ body{
 
 .button_register_completed {
 
-    font-family: "Segoe UI",Arial,sans-serif;
+    font-family: FedraSansStd;
     font-weight: 400;
 	font-size: 14px;
     background-color: #008789;
@@ -173,7 +173,7 @@ body{
 
 #reg_label {
 
-    font-family: "Segoe UI",Arial,sans-serif;
+    font-family: FedraSansStd;
     color: black;
     font-weight: 400;
     font-size: 14px;
@@ -224,7 +224,7 @@ body{
 
 .control-label{
     color: white;
-    font-family: "Segoe UI",Arial,sans-serif;
+    font-family: FedraSansStd;
     font-size: 12px;
     font-weight: 100;
 }
@@ -236,7 +236,7 @@ body{
 
 }
 /*#registrerknapp{
-	font-family: "Segoe UI",Arial,sans-serif;
+	font-family: FedraSansStd;
     font-weight: 400;*/
 	/*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;*/
 	/*font-size: 10px;
@@ -251,7 +251,7 @@ body{
     border-radius: 30px;
 }*/
 #registrer_interesse{
-	font-family: "Segoe UI",Arial,sans-serif;
+	font-family: FedraSansStd;
     font-weight: 400;
 	font-size: 30px;
 	line-height: 0.1;
@@ -265,7 +265,7 @@ body{
 }
 
 #ferdig_interesse{
-    font-family: "Segoe UI",Arial,sans-serif;
+    font-family: FedraSansStd;
     font-weight: 400;
     font-size: 30px;
     line-height: 0.1;
@@ -280,7 +280,7 @@ body{
 
 #usboks1{
 
-	font-family: "Segoe UI",Arial,sans-serif;
+	font-family: FedraSansStd;
     font-weight: 400;
 	font-size: 11px;
 	line-height: 0.5;
@@ -313,7 +313,7 @@ body{
 
 #butt {
 
-	font-family: "Segoe UI",Arial,sans-serif;
+	font-family: FedraSansStd;
     font-weight: 400;
 	font-size: 11px;
 	line-height: 0.1;
@@ -328,7 +328,7 @@ body{
 }
 
 #butt_green{
-	font-family: "Segoe UI",Arial,sans-serif;
+	font-family: FedraSansStd;
     font-weight: 400;
 	font-size: 11px;
 	line-height: 0.1;
@@ -360,7 +360,7 @@ body{
 #login_kandidat{
 
 	width: 150%;
-	font-family: "Segoe UI",Arial,sans-serif;
+	font-family: FedraSansStd;
     font-weight: 400;
 	font-size: 30px;
 	line-height: 0.1;
