--- a/recruiter/apps/hr/templates/hr/basefile-styling.html
+++ b/recruiter/apps/hr/templates/hr/basefile-styling.html
@@ -10,6 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
 
     <link rel="stylesheet" type="text/css" href="{% static 'hr/style.css' %}" />
 
