minor profile fix

--- a/recruiter/apps/candidate/templates/candidate/base.html
+++ b/recruiter/apps/candidate/templates/candidate/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-		<div id="header">
+		<div style="margin-left: -5%" id="header">
 			<a href="{% url 'candidate:profile' %}" id="logo" ><img src="/static/candidate/dnb-logo.png"></a>
 		</div>
 	<head>
