--- a/recruiter/apps/candidate/templates/candidate/profile.html
+++ b/recruiter/apps/candidate/templates/candidate/profile.html
@@ -9,9 +9,9 @@
 	<div class="container-field">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
-				<span class="icon-bar" style="background-color: #F5F5F5;"></span>
-				<span class="icon-bar" style="background-color: #F5F5F5;"></span>
-				<span class="icon-bar" style="background-color: #F5F5F5;"></span>
+				<span class="icon-bar" style="background-color: #000000;"></span>
+				<span class="icon-bar" style="background-color: #000000;"></span>
+				<span class="icon-bar" style="background-color: #000000;"></span>
 			</button>
 		</div>
 	</div>
