--- a/recruiter/apps/hr/templates/hr/base.html
+++ b/recruiter/apps/hr/templates/hr/base.html
@@ -125,12 +125,12 @@
 
                 </ul>
 
-                <form class="navbar-form navbar-left" role="search" method="get" action="#">
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="q" value="">
-                    </div>
-                    <button type="submit" class="btn btn-default" id="butt">Søk</button>
-                </form>
+                <!-- <form class="navbar-form navbar-left" role="search" method="get" action="#"> -->
+                <!--     <div class="form-group"> -->
+                <!--         <input type="text" class="form-control" name="q" value=""> -->
+                <!--     </div> -->
+                <!--     <button type="submit" class="btn btn-default" id="butt">Søk</button> -->
+                <!-- </form> -->
 
 
             </div>
