--- a/recruiter/apps/hr/templates/hr/index.html
+++ b/recruiter/apps/hr/templates/hr/index.html
@@ -12,7 +12,7 @@
 
                     <div class="col-sm-4 col-lg-2">
                         <input type="hidden" name="view_id" value="{{ view.id }}">
-                        <div class="thumbnail" style="border-radius: 15px">
+                        <div class="thumbnail"  id="candidate_box">
 
                             {% if view.id == 0 %}
 
