Design fiks på ledersiden + annet fiks

--- a/recruiter/apps/candidate/templates/candidate/register.html
+++ b/recruiter/apps/candidate/templates/candidate/register.html
@@ -59,7 +59,7 @@
                                             {{ cv_form.cv }}
                                         </div>
 
-                                        <label id="label_upload_cv">
+                                        <label id="label_upload_cv" style="font-weight: 200;font-size: 12px">
                                             <span style="margin-top: 0" class="glyphicon glyphicon-file" aria-hidden="true"></span>
                                             Velg fil
                                         </label>
