--- a/recruiter/apps/hr/templates/hr/leader_view.html
+++ b/recruiter/apps/hr/templates/hr/leader_view.html
@@ -5,7 +5,8 @@
         <div class="container" style="margin-left: 10px">
             <div class="panel panel-default" style="border-radius: 12px;width: 60%;margin-left: 10px;min-width: 400px" >
                 <div class="panel-body">
-                    <h4>{{ candidate.user.get_full_name }}</h4>
+                    <h4 id="home_reg_header">{{ candidate.user.get_full_name }}</h4>
+                    <h5 id="home_reg_header">{{ candidate.user.email }}</h5>
                     <p>{{ candidate.hr_comment }}</p>
                     <form action="{% url 'hr:leaderCV' %}" method="get" style="display: inline">
                         {% csrf_token %}
@@ -54,7 +55,8 @@
 	<div class="container" style="margin-left: 10px">
 		<div class="panel panel-default" style="margin-left: 10px;border-radius: 12px;width: 60%;min-width: 400px">
 			<div class="panel-body">
-				<h4>{{ candidate.user.get_full_name }}</h4>
+				<h4 id="home_reg_header">{{ candidate.user.get_full_name }}</h4>
+                <h5 id="home_reg_header">{{ candidate.user.email }}</h5>
 				<p>{{ candidate.hr_comment }}</p>
 				<form action="{% url 'hr:leaderCV' %}" method="get" style="display: inline">
 					{% csrf_token %}
