Minor design fixes

--- a/recruiter/apps/hr/templates/hr/send-to-leader-modal.html
+++ b/recruiter/apps/hr/templates/hr/send-to-leader-modal.html
@@ -41,7 +41,7 @@
                             <div class="form-group">
                                 <div class="col-sm-offset-0 col-sm-10" id="informasjonsfelt_mail">
 
-                                    <input placeholder="Emne: " id="emne" type="text" class="form-control" name="subject" value="Ny interresant kandidat"/>
+                                    <input placeholder="Emne: " id="emne" type="text" class="form-control" name="subject" value="Ny interessant kandidat"/>
                                 </div>
                             </div>
                             <br/>
