--- a/recruiter/apps/hr/templates/hr/accepted-detail.html
+++ b/recruiter/apps/hr/templates/hr/accepted-detail.html
@@ -4,10 +4,14 @@
 
     <div id="sent_to_leader">
 
-        <h6 id="sent_to_leader">Sendt to Halvor Lande</h6>
+		<h6 id="sent_to_leader">{{ candidate.comment }}</h6>
+    </div>
+    <div id="sent_to_leader">
+
+		<h6 id="sent_to_leader">{{ candidate.leader }}</h6>
     </div>
     <div id="sent_to_leader_date">
-        <h6 id="sent_to_leader_date">26.06.17</h6>
+		<h6 id="sent_to_leader_date">{{ candidate.date_sent }}</h6>
     </div>
 
     {% include 'hr/showCV-form.html' %}
